--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
  
 <body>
   <h1>Website Closed</h1>
-  <p>This my website! No one shall enter!</p>
+  <p>This my website! You're not allowed in!</p>
+ <div class="pic">
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <p>Please knock.</p>
+ </div>
+                                                                                                 
 </body>
  
 </html>
